[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/RaceTrack.gd" type="Script" id=2]
[ext_resource path="res://Scenes/collisionRowing.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/floater.png" type="Texture" id=4]
[ext_resource path="res://Art/arrows.png" type="Texture" id=5]
[ext_resource path="res://Art/numbers.png" type="Texture" id=6]
[ext_resource path="res://Sound/bip.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/horn.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2, 110 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.709804, 0.137255, 0.137255, 1 )
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0156863, 0.0901961, 0.576471, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="TileSet" id=11]
0/name = "floater.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}

[node name="RaceTrack" type="Node2D"]
script = ExtResource( 2 )

[node name="Collision" parent="." instance=ExtResource( 3 )]

[node name="finishLine" type="Area2D" parent="."]
position = Vector2( 6500, 0 )

[node name="line" type="ColorRect" parent="finishLine"]
margin_top = 10.0
margin_right = 8.0
margin_bottom = 230.0
color = Color( 0.921569, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="finishLine"]
position = Vector2( 4, 120 )
shape = SubResource( 8 )

[node name="Player1" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 64 )

[node name="velocity" type="ProgressBar" parent="Player1"]
margin_left = -20.0
margin_top = -46.0
margin_right = 20.0
margin_bottom = -39.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
max_value = 150.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 176 )

[node name="velocity" type="ProgressBar" parent="Player2"]
margin_left = -20.0
margin_top = -46.0
margin_right = 20.0
margin_bottom = -39.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
max_value = 150.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="environment" type="TileMap" parent="."]
tile_set = SubResource( 11 )
format = 1
tile_data = PoolIntArray( 65532, 1073741824, 0, 65534, 1073741824, 0, 0, 1073741824, 0, 2, 1073741824, 0, 4, 1073741824, 0, 6, 1073741824, 0, 8, 1073741824, 0, 10, 1073741824, 0, 12, 1073741824, 0, 14, 1073741824, 0, 16, 1073741824, 0, 18, 1073741824, 0, 20, 1073741824, 0, 22, 1073741824, 0, 24, 1073741824, 0, 26, 1073741824, 0, 28, 1073741824, 0, 30, 1073741824, 0, 32, 1073741824, 0, 34, 1073741824, 0, 36, 1073741824, 0, 38, 1073741824, 0, 40, 1073741824, 0, 42, 1073741824, 0, 44, 1073741824, 0, 46, 1073741824, 0, 48, 1073741824, 0, 50, 1073741824, 0, 52, 1073741824, 0, 54, 1073741824, 0, 56, 1073741824, 0, 58, 1073741824, 0, 60, 1073741824, 0, 62, 1073741824, 0, 64, 1073741824, 0, 66, 1073741824, 0, 68, 1073741824, 0, 70, 1073741824, 0, 72, 1073741824, 0, 74, 1073741824, 0, 76, 1073741824, 0, 78, 1073741824, 0, 80, 1073741824, 0, 82, 1073741824, 0, 84, 1073741824, 0, 86, 1073741824, 0, 88, 1073741824, 0, 90, 1073741824, 0, 92, 1073741824, 0, 94, 1073741824, 0, 96, 1073741824, 0, 98, 1073741824, 0, 100, 1073741824, 0, 102, 1073741824, 0, 104, 1073741824, 0, 106, 1073741824, 0, 108, 1073741824, 0, 262140, 0, 0, 262142, 0, 0, 196608, 0, 0, 196610, 0, 0, 196612, 0, 0, 196614, 0, 0, 196616, 0, 0, 196618, 0, 0, 196620, 0, 0, 196622, 0, 0, 196624, 0, 0, 196626, 0, 0, 196628, 0, 0, 196630, 0, 0, 196632, 0, 0, 196634, 0, 0, 196636, 0, 0, 196638, 0, 0, 196640, 0, 0, 196642, 0, 0, 196644, 0, 0, 196646, 0, 0, 196648, 0, 0, 196650, 0, 0, 196652, 0, 0, 196654, 0, 0, 196656, 0, 0, 196658, 0, 0, 196660, 0, 0, 196662, 0, 0, 196664, 0, 0, 196666, 0, 0, 196668, 0, 0, 196670, 0, 0, 196672, 0, 0, 196674, 0, 0, 196676, 0, 0, 196678, 0, 0, 196680, 0, 0, 196682, 0, 0, 196684, 0, 0, 196686, 0, 0, 196688, 0, 0, 196690, 0, 0, 196692, 0, 0, 196694, 0, 0, 196696, 0, 0, 196698, 0, 0, 196700, 0, 0, 196702, 0, 0, 196704, 0, 0, 196706, 0, 0, 196708, 0, 0, 196710, 0, 0, 196712, 0, 0, 196714, 0, 0, 196716, 0, 0 )

[node name="HUD" type="Node2D" parent="."]
z_index = 1

[node name="tutorial" type="Panel" parent="HUD"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.854902 )
anchor_left = 0.5
anchor_right = 0.5
margin_right = 240.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="HUD/tutorial"]
margin_top = 32.0
margin_right = 240.0
margin_bottom = 94.0
text = "whoever crosses the
finish line first wins!"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ok" type="Button" parent="HUD/tutorial"]
margin_left = 105.0
margin_top = 210.0
margin_right = 135.0
margin_bottom = 230.0
text = "Ok"
__meta__ = {
"_editor_description_": ""
}

[node name="player1" type="Label" parent="HUD/tutorial"]
margin_left = 136.0
margin_top = 124.0
margin_right = 209.0
margin_bottom = 138.0
text = "Player 1"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="player2" type="Label" parent="HUD/tutorial"]
margin_left = 136.0
margin_top = 160.0
margin_right = 209.0
margin_bottom = 174.0
text = "Player 2"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="arrows" type="Sprite" parent="HUD/tutorial"]
position = Vector2( 94, 168 )
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="ad" type="Label" parent="HUD/tutorial"]
margin_left = 82.0
margin_top = 124.0
margin_right = 155.0
margin_bottom = 155.0
text = "A,D"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="counter" type="Node2D" parent="HUD"]
visible = false
position = Vector2( 120, 110 )

[node name="numbers" type="AnimatedSprite" parent="HUD/counter"]
frames = SubResource( 12 )
frame = 2

[node name="animation" type="AnimationPlayer" parent="HUD/counter"]
anims/countdown = SubResource( 13 )

[node name="bip" type="AudioStreamPlayer" parent="HUD/counter"]
stream = ExtResource( 7 )

[node name="horn" type="AudioStreamPlayer" parent="HUD/counter"]
stream = ExtResource( 8 )
volume_db = -10.0
[connection signal="body_entered" from="finishLine" to="." method="_on_Area2D_body_entered"]
[connection signal="pressed" from="HUD/tutorial/ok" to="." method="_on_tutorial_ok_pressed"]
[connection signal="animation_finished" from="HUD/counter/animation" to="." method="_on_counter_animation_finished"]
